custom-resources/harbor/harbor-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
  - name: gateway
    namespace: httpbin
    sectionName: https
  hostnames: 
  - 'harbor.equinox.caci.com'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor
      port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1alpha2
# kind: TLSRoute
# metadata:
#   name: harbor 
#   namespace: harbor
# spec:
#   parentRefs:
#   - name: gateway
#     namespace: httpbin
#     sectionName: passthrough-tls
#   hostnames: 
#   - 'harbor.equinox.caci.com'
#   rules:
#   - backendRefs:
#     - name: harbor
#       namespace: harbor
#       port: 443
